--- a/KifuSF/KFVDonationCell.xib
+++ b/KifuSF/KFVDonationCell.xib
@@ -12,24 +12,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="donationCell" rowHeight="140" id="jmZ-s2-def" customClass="KFDonationTableViewCell" customModule="KifuSF" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="140"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="donationCell" rowHeight="243" id="jmZ-s2-def" customClass="KFVDonationCell" customModule="KifuSF" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="563" height="209"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jmZ-s2-def" id="L6k-bh-eg1">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="139.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="563" height="208.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="edq-5w-uhu">
-                        <rect key="frame" x="24" y="3.5" width="327" height="136"/>
+                        <rect key="frame" x="24" y="16" width="515" height="192.5"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="iNt-Sh-uwG">
-                                <rect key="frame" x="12" y="12" width="303" height="112"/>
+                                <rect key="frame" x="12" y="12" width="491" height="168.5"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5qx-00-jul">
-                                        <rect key="frame" x="0.0" y="0.0" width="112" height="112"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="168.5" height="168.5"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Dog" translatesAutoresizingMaskIntoConstraints="NO" id="QpS-uL-bYZ">
-                                                <rect key="frame" x="0.0" y="0.0" width="112" height="112"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="168.5" height="168.5"/>
                                             </imageView>
                                         </subviews>
                                         <constraints>
@@ -40,46 +40,47 @@
                                             <constraint firstAttribute="trailing" secondItem="QpS-uL-bYZ" secondAttribute="trailing" id="ncx-ra-7l2"/>
                                         </constraints>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="AdA-Go-oAL">
-                                        <rect key="frame" x="128" y="0.0" width="175" height="112"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="AdA-Go-oAL">
+                                        <rect key="frame" x="184.5" y="0.0" width="306.5" height="168.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="MAx-J0-uga">
-                                                <rect key="frame" x="0.0" y="0.0" width="175" height="65"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="113.5" height="28.5"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Toilet Paper" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kw0-SI-SoH">
-                                                        <rect key="frame" x="0.0" y="0.0" width="175" height="24"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="248" text="Toilet Paper" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kw0-SI-SoH">
+                                                        <rect key="frame" x="0.0" y="0.0" width="113.5" height="24"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="24" id="i6d-JZ-jE5"/>
+                                                            <constraint firstAttribute="height" constant="24" id="gxa-Lo-0i7"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@Pondorasti at 12:12 AM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zow-Js-h6F">
-                                                        <rect key="frame" x="0.0" y="24" width="175" height="20.5"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2.4 Miles Away" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hNj-pO-0Sf">
-                                                        <rect key="frame" x="0.0" y="44.5" width="175" height="20.5"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="2.4 Miles Away" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hNj-pO-0Sf">
+                                                        <rect key="frame" x="0.0" y="24" width="113.5" height="4.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
                                             </stackView>
-                                            <view contentMode="scaleToFill" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="iyP-yz-GuR">
-                                                <rect key="frame" x="0.0" y="65" width="162" height="47"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <view contentMode="scaleToFill" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="sEM-cK-Uj6">
+                                                <rect key="frame" x="0.0" y="44.5" width="300" height="124"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1E5-R9-20A">
+                                                        <rect key="frame" x="0.0" y="73.5" width="300" height="50.5"/>
+                                                        <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent neque est, hendrerit vitae nibh ultrices, accumsan elementum ante.</string>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="bottom" secondItem="1E5-R9-20A" secondAttribute="bottom" id="BHZ-MQ-czp"/>
+                                                    <constraint firstItem="1E5-R9-20A" firstAttribute="top" relation="greaterThanOrEqual" secondItem="sEM-cK-Uj6" secondAttribute="top" id="PzL-wo-Wwc"/>
+                                                    <constraint firstAttribute="trailing" secondItem="1E5-R9-20A" secondAttribute="trailing" id="fk7-Nu-MIV"/>
+                                                    <constraint firstItem="1E5-R9-20A" firstAttribute="leading" secondItem="sEM-cK-Uj6" secondAttribute="leading" id="hpM-ZT-jJ9"/>
+                                                </constraints>
                                             </view>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1E5-R9-20A">
-                                                <rect key="frame" x="0.0" y="112" width="171" height="0.0"/>
-                                                <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent neque est, hendrerit vitae nibh ultrices, accumsan elementum ante.</string>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                         </subviews>
                                     </stackView>
                                 </subviews>
@@ -88,7 +89,6 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="iNt-Sh-uwG" secondAttribute="trailing" constant="12" id="4l9-On-uT3"/>
                             <constraint firstAttribute="bottom" secondItem="iNt-Sh-uwG" secondAttribute="bottom" constant="12" id="8BL-CA-My1"/>
-                            <constraint firstAttribute="height" constant="136" id="MWY-MK-640"/>
                             <constraint firstItem="iNt-Sh-uwG" firstAttribute="leading" secondItem="edq-5w-uhu" secondAttribute="leading" constant="12" id="pyB-0G-pvy"/>
                             <constraint firstItem="iNt-Sh-uwG" firstAttribute="top" secondItem="edq-5w-uhu" secondAttribute="top" constant="12" id="xbe-ba-94n"/>
                         </constraints>
@@ -98,6 +98,7 @@
                     <constraint firstItem="edq-5w-uhu" firstAttribute="leading" secondItem="L6k-bh-eg1" secondAttribute="leading" constant="24" id="6H2-0s-iKI"/>
                     <constraint firstAttribute="bottom" secondItem="edq-5w-uhu" secondAttribute="bottom" id="UMm-Fa-xql"/>
                     <constraint firstAttribute="trailing" secondItem="edq-5w-uhu" secondAttribute="trailing" constant="24" id="hC0-uB-4wi"/>
+                    <constraint firstItem="edq-5w-uhu" firstAttribute="top" secondItem="L6k-bh-eg1" secondAttribute="top" constant="16" id="rhE-qr-pUp"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -107,8 +108,8 @@
                 <outlet property="donationImageContainerView" destination="5qx-00-jul" id="9J6-Fa-HQy"/>
                 <outlet property="donationImageView" destination="QpS-uL-bYZ" id="tse-Nm-o8g"/>
                 <outlet property="titleLabel" destination="Kw0-SI-SoH" id="tMV-Wc-nh0"/>
-                <outlet property="usernameLabel" destination="zow-Js-h6F" id="51s-01-vTU"/>
             </connections>
+            <point key="canvasLocation" x="127.5" y="59.5"/>
         </tableViewCell>
     </objects>
     <resources>
